--- a/Index.html
+++ b/Index.html
@@ -16,193 +16,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <style>
-    /*
-     * When running on mobile devices (especially iPhones), the browser adds a
-     * "safe area" inset at the bottom to account for the home indicator.  Tailwind
-     * doesn’t automatically handle these values, so we expose a custom CSS variable
-     * to use throughout the layout.  If the environment doesn’t support
-     * safe‑area variables, it falls back to 0px.
-     */
-    :root {
-      --safe-inset-bottom: env(safe-area-inset-bottom, 0px);
-    }
-    :root {
-      --bg-deep: #0b1020;
-      --bg-deeper: #060913;
-      --violet: #5b3ea8;
-      --blue: #1b4db1;
-      --gold: #f1c763;
-      --gold-strong: #f6d984;
-      --text: #eaeef7;
-      --footer-height: 120px;
-    }
-    /* --- Base & Fonts --- */
-    body {
-      font-family: 'Lato', sans-serif;
-      color: var(--text);
-      background:
-        radial-gradient(1200px 800px at 80% -10%, rgba(91, 62, 168, 0.55), transparent 70%),
-        radial-gradient(900px 700px at 10% 0%, rgba(27, 77, 177, 0.45), transparent 70%),
-        linear-gradient(180deg, var(--bg-deep), var(--bg-deeper));
-      min-height: 100dvh;
-      overflow-x: hidden;
-      /*
-       * Reserve space at the bottom equal to the footer height plus the safe area.
-       * Without this, the bottom navigation bar and music player can overlap
-       * content on devices with a home indicator (iPhone X and later).  The
-       * env() call will return 0 on platforms that don’t support it.
-       */
-      padding-bottom: calc(var(--footer-height) + var(--safe-inset-bottom));
-    }
-    .font-cinzel { font-family: 'Cinzel', serif; }
-
-    /* --- Animations & Effects --- */
-    .glow { animation: pulse-glow 2s infinite alternate; }
-    @keyframes pulse-glow {
-      from { text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--gold); }
-      to   { text-shadow: 0 0 20px #fff, 0 0 30px var(--gold), 0 0 40px var(--gold); }
-    }
-    .stars::before,
-    .stars::after {
-      content: ""; position: fixed; inset: 0; pointer-events: none;
-      background-image:
-        radial-gradient(2px 2px at 20% 30%, white, transparent), radial-gradient(2px 2px at 80% 40%, white, transparent),
-        radial-gradient(1.5px 1.5px at 70% 10%, white, transparent), radial-gradient(1.5px 1.5px at 40% 80%, white, transparent),
-        radial-gradient(1px 1px at 15% 55%, white, transparent), radial-gradient(1px 1px at 50% 20%, white, transparent),
-        radial-gradient(1px 1px at 90% 70%, white, transparent), radial-gradient(1.5px 1.5px at 5% 5%, white, transparent);
-      opacity: 0.8; z-index: -1; animation: move-stars 300s linear infinite;
-    }
-    .stars::after {
-      background-image:
-        radial-gradient(1.5px 1.5px at 50% 50%, white, transparent), radial-gradient(1.5px 1.5px at 25% 15%, white, transparent),
-        radial-gradient(1px 1px at 5% 85%, white, transparent), radial-gradient(1px 1px at 85% 95%, white, transparent),
-        radial-gradient(1.5px 1.5px at 60% 70%, white, transparent);
-      filter: blur(1px); opacity: 0.5; animation-name: move-stars-slower; animation-duration: 500s;
-    }
-    @keyframes move-stars { from { background-position: 0 0; } to { background-position: -10000px 5000px; } }
-    @keyframes move-stars-slower { from { background-position: 0 0; } to { background-position: -8000px 4000px; } }
-
-    .planet, .sun { 
-      position: absolute; 
-      border-radius: 50%; 
-      cursor: pointer; 
-      transition: transform .3s ease, box-shadow .3s ease, background 2.5s ease-in-out, border 2.5s ease-in-out; 
-      animation: float-animation 6s ease-in-out infinite; 
-      z-index: 20; 
-    }
-    .planet:hover, .sun:hover { transform: scale(1.06); }
-    .planet { box-shadow: 0 0 0 1px rgba(255, 255, 255, .08) inset, 0 0 14px rgba(241,199,99,.35); }
-    .sun { animation: pulse 4s infinite, float-animation 6s ease-in-out infinite; border: 2px solid #fff; }
-    @keyframes pulse { 0% { box-shadow: 0 0 10px 0 rgba(255, 237, 160, .7);} 50% { box-shadow: 0 0 25px 10px rgba(255, 237, 160, .3);} 100%{ box-shadow: 0 0 10px 0 rgba(255, 237, 160, .7);} }
-    @keyframes float-animation { 0% { transform: translateY(0px);} 50%{ transform: translateY(-8px) translateX(4px);} 100%{ transform: translateY(0px);} }
-    
-    .fade-out { animation: fadeOut 1.5s forwards; }
-    @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
-
-    /* --- Animación para el botón del genio --- */
-    .genie-sparkle { animation: genie-pulse 1.5s ease-out; }
-    @keyframes genie-pulse {
-      0%, 100% { transform: scale(1) rotate(0); text-shadow: none; }
-      50% { transform: scale(1.2) rotate(-10deg); text-shadow: 0 0 15px #fff, 0 0 25px #0ff; }
-    }
-    .shooting-star { position: fixed; height: 2px; background: linear-gradient(-45deg, #fff, rgba(255, 255, 255, 0)); border-radius: 999px; filter: drop-shadow(0 0 6px #fff); animation: tail 3s ease-in-out forwards, shooting 3s ease-in-out forwards; z-index: 100; }
-    @keyframes tail { 0% { width: 0; } 30% { width: 100px; } 100% { width: 0; } }
-    @keyframes shooting { 0% { transform: translateX(0) translateY(0); opacity: 1; } 100% { transform: translateX(300px) translateY(300px); opacity: 0; } }
-
-    .view-container { transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; }
-    .view-container.hidden { opacity: 0; transform: translateY(10px); pointer-events: none; position: absolute; }
-
-    #subliminal-container { transition: opacity .5s ease-in-out; }
-    @keyframes quickFade { 0% { opacity: 0; } 20% { opacity: 0.2; } 80% { opacity: 0.2; } 100% { opacity: 0; } }
-    .subliminal-show { animation: quickFade 1.5s forwards; }
-
-    /* --- UI Components --- */
-    .gallery-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 8px; }
-    .nav-btn.active { color: #ffffff; transform: scale(1.1); }
-    .tab-btn.active { border-bottom: 2px solid var(--gold); color: var(--gold-strong); }
-    .gemini-btn { background-image: linear-gradient(to right, #89f7fe 0%, #66a6ff 100%); transition: transform 0.2s ease, box-shadow 0.2s ease; }
-    .gemini-btn:hover { transform: scale(1.05); box-shadow: 0 0 15px rgba(102, 166, 255, 0.5); }
-    .chat-bubble-user { background-color: #3b82f6; }
-    .chat-bubble-ai { background-color: #374151; }
-    
-    /* --- Vision Board --- */
-    #vision-board-editor { background-color: rgba(10, 10, 20, 0.9); backdrop-filter: blur(10px); }
-    #vision-board-canvas { background-image: radial-gradient(circle, #2d3748 1px, transparent 1px); background-size: 20px 20px; border: 1px dashed #4a5568; }
-    .vision-board-item { position: absolute; cursor: move; }
-    .vision-board-item img { width: 100%; height: 100%; object-fit: cover; pointer-events: none; border-radius: 4px; }
-    .resize-handle { position: absolute; width: 10px; height: 10px; background: white; border: 1px solid #333; bottom: -5px; right: -5px; cursor: nwse-resize; }
-    .vision-board-text { padding: 5px; border: 1px dashed transparent; min-width: 50px; min-height: 20px; }
-    .vision-board-text:focus { border-color: var(--gold); outline: none; background: rgba(255,255,255,0.1); }
-    .vb-selected { outline: 2px solid var(--gold); box-shadow: 0 0 0 3px rgba(241,199,99,.25), 0 10px 30px rgba(0,0,0,.35); }
-
-
-    /* --- Loading Spinner --- */
-    .loader {
-        width: 20px; height: 20px; border-radius: 50%; display: inline-block;
-        border-top: 2px solid #FFF; border-right: 2px solid transparent;
-        box-sizing: border-box; animation: spin 1s linear infinite;
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-
-    /* --- Media Viewer Mejorado --- */
-    #viewer-img, #viewer-video {
-      transition: opacity 0.4s ease-in-out, transform 0.3s ease-in-out;
-    }
-    #viewer-content-area.zoomed #viewer-img {
-      transform: scale(1.5);
-      cursor: zoom-out;
-    }
-    .viewer-btn-active {
-      color: var(--gold-strong) !important;
-      box-shadow: 0 0 10px var(--gold);
-    }
-
-    /* --- Partículas Cósmicas para Loop --- */
-    @keyframes sparkle {
-        0% { transform: scale(0) rotate(0deg); opacity: 0; }
-        50% { opacity: 1; }
-        100% { transform: scale(1.5) rotate(360deg); opacity: 0; }
-    }
-    #viewer-particles::before, #viewer-particles::after {
-        content: ""; position: absolute; width: 2px; height: 2px;
-        background: white; border-radius: 50%;
-        animation: sparkle 5s linear infinite;
-    }
-    #viewer-particles::before {
-        top: 20%; left: 30%;
-        box-shadow: 60vw 40vh 3px white, -20vw 10vh 2px white, 30vw -30vh 2px white, 10vw 50vh 1px white;
-    }
-    #viewer-particles::after {
-        top: 80%; left: 70%; animation-duration: 6s; animation-direction: reverse;
-        box-shadow: -50vw -60vh 2px white, 10vw 15vh 2px white, -30vw 25vh 1px white, 40vw -10vh 2px white;
-    }
-
-    /* --- Billetera de Luz Styles --- */
-    .wallet-card {
-        background: linear-gradient(45deg, rgba(27, 77, 177, 0.3), rgba(91, 62, 168, 0.4));
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-    .light-coin-icon {
-        filter: drop-shadow(0 0 8px var(--gold));
-    }
-    .transaction-item:not(:last-child) {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-    .status-en-camino {
-        color: #fbbf24; /* amber-400 */
-        animation: pulse-status 2s infinite;
-    }
-    @keyframes pulse-status { 50% { opacity: 0.6; } }
-    .status-acreditado {
-        color: #4ade80; /* green-400 */
-    }
-    .transaction-message {
-        background: rgba(10, 10, 20, 0.5);
-        border-left: 3px solid var(--gold);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="overflow-x-hidden overflow-y-auto text-gray-100 stars">
   <!-- SPLASH SCREEN -->
